--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,46 @@ pyplotfiles/*.txt
 pyplotfiles/*.pdf
 callgrind.*
 cachegrind.*
+algo_testNVI
+algo_testNVIOF
+algo_testRLRW02
+algo_testRLRW24
+algo_testRLRW46
+algo_testRLRWOF02
+algo_testRLRWOF24
+algo_testRLRWOF46
+algo_testRLRWOFE102
+algo_testRLRWOFE124
+algo_testRLRWOFE146
+algo_testRLRWOFE202
+algo_testRLRWOFE224
+algo_testRLRWOFE246
+algo_testRLRWOFE302
+algo_testRLRWOFE324
+algo_testRLRWOFE346
+algo_testRLRWOFE424
+algo_testRLRWOFE402
+algo_testRLRWOFE446
+algo_testRLRWOFE502
+algo_testRLRWOFE524
+algo_testRLRWOFE546
+VIAEH_algorithm.cpp
+Skitsas/RLRS.txt
+Skitsas/RLRS_S500_100A_50SS_E-005_OF_ITER01.txt
+Skitsas/RLRS_S500_100A_50SS_E-01_OF_ITER46.txt
+Skitsas/RLRS_FE.txt
+Skitsas/RandomGraphs_S.txt
+Skitsas/RandomGraphs_50S_100A_50SS_S.txt
+Skitsas/RandomGraphs_50S_100A_50SS_OFS.txt
+Skitsas/avgRLRS.txt
+Skitsas/avgRLRS_S500_100A_50SS_E-005_OF_ITER01.txt
+Skitsas/avgRLRS_S500_100A_50SS_E-01_OF_ITER46.txt
+Skitsas/avgRLRS_FE.txt
+Skitsas/AVG_RandomGraphs_S.txt
+Skitsas/AVG_RandomGraphs_50S_100A_50SS_S.txt
+Skitsas/AVG_RandomGraphs_50S_100A_50SS_OFS.txt
+.gitignore
+Skitsas/AVG_RandomGraphs_S.txt
+Skitsas/avgRLRS.txt
+Skitsas/RandomGraphs_S.txt
+Skitsas/RLRS.txt
